update: estatement scanning
