# app/controllers/api/e-statement_controller.go
@@ -90,7 +90,8 @@ func (c *EStatementController) EStatementFindAll(ctx *fiber.Ctx) error {
 //	@Param			pdf_library	formData	string		true	"PDF library to use"
 //	@Param			bank		formData	string		false	"Bank name"
 //	@Param			time_bomb	formData	string		false	"Time bomb"
-//	@Param			summary	formData	string		false	"Summary"
+//	@Param			summary		formData	string		false	"Summary"
+//	@Param			scan_only	formData	bool		false	"Only scan the e-statement"
 //	@Success		200		{object}	types.Response{data=estatement.ScanEStatementResponse}	"Successfully scanned e-statement"
 //	@Failure		400		{object}	validator.GlobalErrorResponse		"Bad request"
 //	@Failure		500		{object}	validator.GlobalErrorResponse		"Internal server error"
